// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UI5Config Schema validation newInstance with schema validation success 1`] = `
UI5Config {
  "document": YamlDocument {
    "documents": Array [
      Object {
        "framework": Object {
          "name": "SAPUI5",
          "version": "1.124.0",
        },
        "metadata": Object {
          "allowSapInternal": true,
          "name": "com.sap.cap.fe.ts.sample",
        },
        "specVersion": "4.0",
        "type": "application",
      },
    ],
  },
}
`;

exports[`UI5Config add/find/removeCustomTask addCustomTask 1`] = `
"builder:
  customTasks:
    - name: ui5-task-zipper
      afterTask: generateCachebusterInfo
      configuration:
        archiveName: my-archive
"
`;

exports[`UI5Config add/find/removeCustomTask removeCustomTask 1`] = `
"builder:
  customTasks: []
"
`;

exports[`UI5Config add/find/update/removeCustomMiddleware addCustomMiddleware 1`] = `
"server:
  customMiddleware:
    - name: custom-middleware
      afterMiddleware: ~otherMiddleware
      configuration:
        ui5:
          path:
            - /resources
            - /test-resources
          url: http://ui5.example
        version: 1.95.1
        debug: true
"
`;

exports[`UI5Config add/find/update/removeCustomMiddleware removeMiddleware 1`] = `
"server:
  customMiddleware: []
"
`;

exports[`UI5Config add/find/update/removeCustomMiddleware updateMiddleware existing middleware 1`] = `
"server:
  customMiddleware:
    - name: custom-middleware
      afterMiddleware: ~newMiddleware
      configuration:
        newValue:
          should: overwrite existing
"
`;

exports[`UI5Config add/find/update/removeCustomMiddleware updateMiddleware that did not exist, should add it 1`] = `
"server:
  customMiddleware:
    - name: custom-middleware
      afterMiddleware: ~otherMiddleware
      configuration:
        ui5:
          path:
            - /resources
            - /test-resources
          url: http://ui5.example
        version: 1.95.1
        debug: true
"
`;

exports[`UI5Config addAbapDeployTask AppStudio + Steampunk settings 1`] = `
"builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          destination: ~destination~
          scp: true
        app:
          name: ~name
          description: ~description
          package: ~package
          transport: ~transport
"
`;

exports[`UI5Config addAbapDeployTask local settings 1`] = `
"builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          url: http://localhost:8080
          client: '012'
        app:
          name: ~name
          description: ~description
          package: ~package
          transport: ~transport
"
`;

exports[`UI5Config addAbapDeployTask minimal adp settings 1`] = `
"builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          url: http://localhost:8080
          client: '012'
        app:
          package: $TMP
        exclude:
          - /test/
        lrep: apps/workcenter/appVariants/customer.app.variant
"
`;

exports[`UI5Config addAbapDeployTask use open source task 1`] = `
"builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: abap-deploy-task
      afterTask: generateCachebusterInfo
      configuration:
        target:
          url: http://localhost:8080
          client: '012'
          authenticationType: reentranceTicket # SAML support for vscode
        app:
          name: ~name
          description: ~description
          package: ~package
          transport: ~transport
        exclude:
          - /test/
        index: true
"
`;

exports[`UI5Config addBackendToFioriToolsProxyMiddleware add proxy without out backend first and then call add backend 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
        backend:
          - url: http://localhost:8080
            path: /~testpath~
"
`;

exports[`UI5Config addBackendToFioriToolsProxyMiddleware should add comments with backend authentication type as reentrance ticket 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
        backend:
          - url: http://localhost:8080
            path: /~testpath~
            authenticationType: reentranceTicket # SAML support for vscode
"
`;

exports[`UI5Config addCloudFoundryDeployTask add modules task 1`] = `
"builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: ui5-task-zipper
      afterTask: generateCachebusterInfo
      configuration:
        archiveName: myTestAppId
        relativePaths: true
        additionalFiles:
          - xs-app.json
    - name: ui5-tooling-modules-task
      afterTask: replaceVersion
      configuration: {}
"
`;

exports[`UI5Config addCloudFoundryDeployTask add transpile task 1`] = `
"builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: ui5-task-zipper
      afterTask: generateCachebusterInfo
      configuration:
        archiveName: myTestAppId
        relativePaths: true
        additionalFiles:
          - xs-app.json
    - name: ui5-tooling-modules-task
      afterTask: replaceVersion
      configuration: {}
    - name: ui5-tooling-transpile-task
      afterTask: replaceVersion
      configuration:
        debug: true
        removeConsoleStatements: true
        transpileAsync: true
        transpileTypeScript: true
"
`;

exports[`UI5Config addCloudFoundryDeployTask minimal settings required 1`] = `
"builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: ui5-task-zipper
      afterTask: generateCachebusterInfo
      configuration:
        archiveName: myTestAppId
        relativePaths: true
        additionalFiles:
          - xs-app.json
"
`;

exports[`UI5Config addFioriToolsProxyMiddleware add / get commonly configured backend (and UI5 defaults) 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://localhost:8080
            path: /~testpath~
            destination: ~destination~
            destinationInstance: ~destinationInstance~
          - url: http://localhost:8080
            path: /~testpath~
            destination: ~destination~
            destinationInstance: ~destinationInstance~
            authenticationType: reentranceTicket # SAML support for vscode
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
"
`;

exports[`UI5Config addFioriToolsProxyMiddleware add backend with flexible parameters (and UI5 defaults) & writes ignoreCertError true if enabled 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertErrors: true # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://localhost:8080
            path: /~testpath~
            pathPrefix: /~prefix
            scp: true
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
"
`;

exports[`UI5Config addFioriToolsProxyMiddleware add backend with flexible parameters (and UI5 defaults) & writes ignoreCertErrors true if enabled 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertErrors: true # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://localhost:8080
            path: /~testpath~
            pathPrefix: /~prefix
            scp: true
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
"
`;

exports[`UI5Config addFioriToolsProxyMiddleware add backend without destination (and UI5 defaults) 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://localhost:8080
            path: /~testpath~
            client: '012'
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
"
`;

exports[`UI5Config addFioriToolsProxyMiddleware add backend without path or destination (and UI5 defaults) 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://localhost:8080
            path: /
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
"
`;

exports[`UI5Config addFioriToolsProxyMiddleware add without backend or UI5 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
"
`;

exports[`UI5Config addFioriToolsProxyMiddleware add without backend or but UI5 defaults 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
"
`;

exports[`UI5Config addFioriToolsProxyMiddleware add without backend or but all properties for UI5 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /~customResources
            - /~other
          url: http://~url
          version: 1.23.3
          directLoad: true
"
`;

exports[`UI5Config addMockServerMiddleware add with services 1`] = `
"server:
  customMiddleware:
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: /path/to/service
            metadataPath: ./webapp/localService/new-service/metadata.xml
            mockdataPath: ./webapp/localService/new-service/data
            generateMockData: true
        annotations: []
"
`;

exports[`UI5Config addMockServerMiddleware add with services and annotations 1`] = `
"server:
  customMiddleware:
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: /path/to/service
            metadataPath: ./webapp/localService/new-service/metadata.xml
            mockdataPath: ./webapp/localService/new-service/data
            generateMockData: true
        annotations:
          - localPath: ./webapp/annotations/annotations.xml
            urlPath: annotations.xml
"
`;

exports[`UI5Config addMockServerMiddleware add with services with value list references 1`] = `
"server:
  customMiddleware:
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: /path/to/service
            metadataPath: ./webapp/localService/new-service/metadata.xml
            mockdataPath: ./webapp/localService/new-service/data
            generateMockData: true
            resolveExternalServiceReferences: true
        annotations: []
"
`;

exports[`UI5Config addMockServerMiddleware add without services and annotations 1`] = `
"server:
  customMiddleware:
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services: []
        annotations: []
"
`;

exports[`UI5Config addServeStaticConfig add with multiple paths (existing config) 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-servestatic
      afterMiddleware: compression
      configuration:
        paths:
          - path: /resources/targetapp
            src: /targetapp/abeppw
          - path: /appconfig
            src: /srcapp/appconfig
          - path: /~path
            src: /~src
            fallthrough: false
          - path: /~otherPath
            src: /~otherSrc
            fallthrough: false
"
`;

exports[`UI5Config addServeStaticConfig add with multiple paths (existing config) 2`] = `
"server:
  customMiddleware:
    - name: fiori-tools-servestatic
      afterMiddleware: compression
      configuration:
        paths:
          - path: /resources/targetapp
            src: /targetapp/abeppw
          - path: /appconfig
            src: /srcapp/appconfig
          - path: /~path
            src: /~src
            fallthrough: false
          - path: /~otherPath
            src: /~otherSrc
            fallthrough: false
          - path: /~newPath
            src: /~newSrc
            fallthrough: false
"
`;

exports[`UI5Config addServeStaticConfig add with single path (no existing serve static config) 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-servestatic
      afterMiddleware: compression
      configuration:
        paths:
          - path: /~testpath~
            src: /~src
            fallthrough: false
"
`;

exports[`UI5Config addServeStaticConfig update serve static config 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-servestatic
      beforeMiddleware: fiori-tools-proxy
      configuration:
        paths:
          - path: /resources/targetapp
            src: /targetapp/abeppw
          - path: /appconfig
            src: /srcapp/appconfig
          - path: /~testpath~
            src: /~src
            fallthrough: false
          - path: /~other
            src: /~otherSrc
            fallthrough: false
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertErrors: false
        backend:
          - path: /sap
            url: http://test.url.com:50017
"
`;

exports[`UI5Config addServiceToMockserverMiddleware add new service 1`] = `
"server:
  customMiddleware:
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: /path/to/service
            metadataPath: ./webapp/localService/new-service/metadata.xml
            mockdataPath: ./webapp/localService/new-service/data
            generateMockData: true
        annotations: []
"
`;

exports[`UI5Config addServiceToMockserverMiddleware add new service with annotationsConfig 1`] = `
"server:
  customMiddleware:
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: /path/to/service
            metadataPath: ./webapp/localService/new-service/metadata.xml
            mockdataPath: ./webapp/localService/new-service/data
            generateMockData: true
        annotations:
          - localPath: ./webapp/annotations/annotations.xml
            urlPath: annotations.xml
"
`;

exports[`UI5Config addServiceToMockserverMiddleware add new service with value list references 1`] = `
"server:
  customMiddleware:
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: /path/to/service
            metadataPath: ./webapp/localService/new-service/metadata.xml
            mockdataPath: ./webapp/localService/new-service/data
            generateMockData: true
            resolveExternalServiceReferences: true
        annotations: []
"
`;

exports[`UI5Config addServiceToMockserverMiddleware try to add service duplicate 1`] = `
"server:
  customMiddleware:
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: /path/to/service
            metadataPath: ./webapp/localService/new-service/metadata.xml
            mockdataPath: ./webapp/localService/new-service/data
            generateMockData: true
        annotations: []
"
`;

exports[`UI5Config addUI5Framework Add with specific theme and additional library 1`] = `
"framework:
  name: SAPUI5
  version: 1.64.0
  libraries:
    - name: sap.m
    - name: themelib_sap_belize
"
`;

exports[`UI5Config addUI5Framework Minimal set of inputs 1`] = `
"framework:
  name: SAPUI5
  version: 1.64.0
  libraries:
    - name: themelib_sap_fiori_3
"
`;

exports[`UI5Config addUI5Framework Use a dark theme 1`] = `
"framework:
  name: SAPUI5
  version: 1.64.0
  libraries:
    - name: sap.m
    - name: themelib_sap_fiori_3
"
`;

exports[`UI5Config addUI5Framework Use horizon high contrast black theme 1`] = `
"framework:
  name: SAPUI5
  version: 1.96.0
  libraries:
    - name: sap.m
    - name: themelib_sap_horizon
"
`;

exports[`UI5Config addUI5Framework Use horizon high contrast white theme 1`] = `
"framework:
  name: SAPUI5
  version: 1.96.0
  libraries:
    - name: sap.m
    - name: themelib_sap_horizon
"
`;

exports[`UI5Config addUI5Framework Use horizon high dark theme 1`] = `
"framework:
  name: SAPUI5
  version: 1.96.0
  libraries:
    - name: sap.m
    - name: themelib_sap_horizon
"
`;

exports[`UI5Config addUi5ToFioriToolsProxyMiddleware add ui5 config to empty tools middleware config 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          - path:
              - /~customResources
              - /~other
            url: http://~url
"
`;

exports[`UI5Config getAppReloadMiddlewareConfig 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
"
`;

exports[`UI5Config getType / setType replace type 1`] = `
"type: library
"
`;

exports[`UI5Config getType / setType set type 1`] = `
"type: application
"
`;

exports[`UI5Config setMetadata replace metadata 1`] = `
"metadata:
  name: the.replaced.name
"
`;

exports[`UI5Config setMetadata set name and copyright 1`] = `
"metadata:
  name: test.name
  copyright: ©
"
`;
